--- a/src/app/cassie/cassie.page.html
+++ b/src/app/cassie/cassie.page.html
@@ -4,7 +4,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      Tyra
+    Cassie
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -103,7 +103,7 @@
       <ion-slide>
         <ion-card>
           <ion-card-header>
-            <ion-img src="src\assets\Paladins\Dano\Cassie\skill\disengage.jpg" ionError="REPELIR">
+            <ion-img src="\assets\Paladins\Dano\Cassie\skill\disengage.jpg" ionError="REPELIR">
             </ion-img>
             <ion-card-title>REPELIR</ion-card-title>
           </ion-card-header>
@@ -136,7 +136,8 @@
           </ion-card-header>
 
           <ion-card-content>
-            Rola rapidamente na direção na qual você está se movendo.           
+            Rola rapidamente na direção na qual você está se movendo.     
+          </ion-card-content>      
         </ion-card>
       </ion-slide>
       <ion-slide>
