--- a/src/app/lian/lian.page.html
+++ b/src/app/lian/lian.page.html
@@ -14,7 +14,7 @@
       <ion-col align-self-center name="lobo" id="lobo">
 
 
-        <ion-img src="\assets\Paladins\Dano\Tyra\tyra.png" ionError="tyra" style="
+        <ion-img src="\assets\Paladins\Dano\Lian\lian (2).png" ionError="tyra" style="
                 background-color: #0e222b;
                 width: 106%;
                 border: 2px inset rgb(15,41,50);
@@ -48,12 +48,13 @@
       <ion-slide>
         <ion-card>
           <ion-card-header>
-            <ion-img src="\assets\Paladins\Dano\Tyra\Legends\1.png" ionError="Tyra"> </ion-img>
+            <ion-img src="\assets\Paladins\Dano\Lian\len\precision.png" ionError="Tyra"> </ion-img>
             <ion-card-title>PRECISÃO</ion-card-title>
           </ion-card-header>
 
           <ion-card-content>
-            Acertar tiros consecutivos aumenta o dano causado pelo Rifle Herdado nesses alvos em 5% por 5 segundos, estocando em até 25%.
+            Acertar tiros consecutivos aumenta o dano causado pelo Rifle Herdado nesses alvos em 5% por 5 segundos,
+            estocando em até 25%.
           </ion-card-content>
 
         </ion-card>
@@ -61,7 +62,7 @@
       <ion-slide>
         <ion-card>
           <ion-card-header>
-            <ion-img src="\assets\Paladins\Dano\Tyra\Legends\marca.png" ionError="Tyra"> </ion-img>
+            <ion-img src="\assets\Paladins\Dano\Lian\len\precision.png" ionError="Tyra"> </ion-img>
             <ion-card-title>PRONTIDÃO</ion-card-title>
           </ion-card-header>
 
@@ -73,7 +74,7 @@
       <ion-slide>
         <ion-card>
           <ion-card-header>
-            <ion-img src="\assets\Paladins\Dano\Tyra\Legends\grana.png" ionError="Tyra"> </ion-img>
+            <ion-img src="\assets\Paladins\Dano\Lian\len\eminence.png" ionError="Tyra"> </ion-img>
             <ion-card-title>TRANSCENDÊNCIA</ion-card-title>
           </ion-card-header>
 
@@ -89,13 +90,13 @@
       <ion-slide>
         <ion-card>
           <ion-card-header>
-            <ion-img src=\assets\Paladins\Dano\Tyra\Legends\Skills\auto-rifle.jpg ionError="Tyra"> </ion-img>
-            <ion-card-title class="st"> RIFLE DE CAÇA</ion-card-title>
+            <ion-img src="\assets\Paladins\Dano\Lian\skill\heirloom-rifle.jpg" ionError="Tyra"> </ion-img>
+            <ion-card-title class="st">RIFLE HERDADO</ion-card-title>
           </ion-card-header>
 
           <ion-card-content>
-            Dispara a cada 0,09s causando 120 de dano. Efetivo a curta e média distância. Cura Tyra em 15% do dano
-            causado.
+            Um rifle que foi passado de geração para geração da sua nobre casa por décadas. Causa 400 de dano a cada
+            0,45s e tem alcance médio.
           </ion-card-content>
         </ion-card>
       </ion-slide>
@@ -103,13 +104,13 @@
       <ion-slide>
         <ion-card>
           <ion-card-header>
-            <ion-img src=\assets\Paladins\Dano\Tyra\Legends\Skills\nade-launcher.jpg ionError="LANÇA-GRANADAS">
+            <ion-img src=\assets\Paladins\Dano\Lian\skill\valor.jpg ionError="LANÇA-GRANADAS">
             </ion-img>
-            <ion-card-title>LANÇA-GRANADAS</ion-card-title>
+            <ion-card-title>VALOR</ion-card-title>
           </ion-card-header>
 
           <ion-card-content>
-            Atira uma granada que causa 700 de dano dentro de uma pequena área.
+            Dispara um tiro potente que causa 400 de dano a todos os inimigos à sua frente. É uma arma de ataque.
           </ion-card-content>
         </ion-card>
       </ion-slide>
@@ -117,13 +118,13 @@
       <ion-slide>
         <ion-card>
           <ion-card-header>
-            <ion-img src=\assets\Paladins\Dano\Tyra\Legends\Skills\fire-bomb.jpg ionError="BOMBA"> </ion-img>
-            <ion-card-title>BOMBA INCENDIÁRIA</ion-card-title>
+            <ion-img src=\assets\Paladins\Dano\Lian\skill\presence.jpg ionError="BOMBA"> </ion-img>
+            <ion-card-title>PRESENÇA</ion-card-title>
           </ion-card-header>
 
           <ion-card-content>
-            Lança um artefato incendiário que causa um lago de fogo por 6s e queima 9% da vida máxima dos inimigos a
-            cada 0,6s e reduz sua cura por 50%.
+            Carrega seu rifle por 0,5s e então realiza um disparo de longo alcance que atravessa os inimigos causando
+            800 de dano. É uma arma de ataque.
           </ion-card-content>
         </ion-card>
       </ion-slide>
@@ -132,26 +133,27 @@
       <ion-slide>
         <ion-card>
           <ion-card-header>
-            <ion-img src=\assets\Paladins\Dano\Tyra\Legends\Skills\hunters-mark.jpg ionError="MARCA"> </ion-img>
-            <ion-card-title>MARCA DA CAÇADORA</ion-card-title>
+            <ion-img src=\assets\Paladins\Dano\Lian\skill\grace.jpg ionError="MARCA"> </ion-img>
+            <ion-card-title>GRAÇA</ion-card-title>
           </ion-card-header>
 
           <ion-card-content>
-            Marca um inimigo por 6s. Inimigos marcados são revelados e recebem 15% a mais de dano dos seus ataques com
-            arma.
+            Desliza rapidamente na direção em que está se movendo e dispara um tiro de rifle que causa 400 de dano ao
+            inimigo mais próximo do ponto no qual está mirando. É uma arma de ataque.
+
           </ion-card-content>
         </ion-card>
       </ion-slide>
       <ion-slide>
         <ion-card>
           <ion-card-header>
-            <ion-img src=\assets\Paladins\Dano\Tyra\Legends\Skills\crossfire.jpg ionError="BOMBA"> </ion-img>
-            <ion-card-title>FOGO CRUZADO </ion-card-title>
+            <ion-img src=\assets\Paladins\Dano\Lian\skill\enlightenment.jpg ionError="BOMBA"> </ion-img>
+            <ion-card-title>ILUMINAÇÃO </ion-card-title>
           </ion-card-header>
 
           <ion-card-content>
-            Ganha 40% mais velocidade de ataque e 40% mais velocidade de movimento por 4,5s. Os disparos não consomem
-            munição.
+            Ganha imunidade a dano e a controle por 1s, e então dispara uma poderosa rajada que passa pelos inimigos e
+            causa 1600 de dano. Matar um inimigo carrega 50% da suprema.
           </ion-card-content>
         </ion-card>
       </ion-slide>
