--- a/src/app/skye/skye.page.html
+++ b/src/app/skye/skye.page.html
@@ -44,7 +44,7 @@
       <ion-slide>
         <ion-card>
           <ion-card-header>
-            <ion-img src="\assets\Paladins\Flanco\Maeve\len\rogue's-gambit.png" ionError="Tyra"> </ion-img>
+            <ion-img src="\assets\Paladins\Flanco\Skye\len\debilitate.png" ionError="Tyra"> </ion-img>
             <ion-card-title>
               DEBILITAR</ion-card-title>
           </ion-card-header>
@@ -57,7 +57,7 @@
       <ion-slide>
         <ion-card>
           <ion-card-header>
-            <ion-img src="\assets\Paladins\Flanco\Maeve\len\street-justice.png" ionError="Tyra"> </ion-img>
+            <ion-img src="\assets\Paladins\Flanco\Skye\len\smoke-and-dagger.png" ionError="Tyra"> </ion-img>
             <ion-card-title>
               FUMAÇA E ADAGA</ion-card-title>
           </ion-card-header>
@@ -70,7 +70,7 @@
       <ion-slide>
         <ion-card>
           <ion-card-header>
-            <ion-img src="\assets\Paladins\Flanco\Maeve\len\cat-burglar.png" ionError="Tyra"> </ion-img>
+            <ion-img src="\assets\Paladins\Flanco\Skye\len\preparation.png" ionError="Tyra"> </ion-img>
             <ion-card-title>PREPARAÇÃO</ion-card-title>
           </ion-card-header>
 
@@ -86,7 +86,7 @@
       <ion-slide>
         <ion-card>
           <ion-card-header>
-            <ion-img src="\assets\Paladins\Flanco\Maeve\skill\daggers.jpg" ionError="Tyra"> </ion-img>
+            <ion-img src="\assets\Paladins\Flanco\Skye\skill\wrist-crossbow.jpg" ionError="Tyra"> </ion-img>
             <ion-card-title class="st">BESTA DE PULSO</ion-card-title>
           </ion-card-header>
 
@@ -99,7 +99,7 @@
       <ion-slide>
         <ion-card>
           <ion-card-header>
-            <ion-img src=\assets\Paladins\Flanco\Maeve\skill\pounce.jpg ionError="LANÇA-GRANADAS">
+            <ion-img src=\assets\Paladins\Flanco\Skye\skill\poison-bolts.jpg ionError="LANÇA-GRANADAS">
             </ion-img>
             <ion-card-title>DARDOS TÓXICOS
             </ion-card-title>
@@ -115,7 +115,7 @@
       <ion-slide>
         <ion-card>
           <ion-card-header>
-            <ion-img src=\assets\Paladins\Flanco\Maeve\skill\nine-lives.jpg ionError="BOMBA"> </ion-img>
+            <ion-img src=\assets\Paladins\Flanco\Skye\skill\smoke-screen.jpg jpgionError="BOMBA"> </ion-img>
             <ion-card-title>NUVEM DE FUMAÇA</ion-card-title>
           </ion-card-header>
 
@@ -129,7 +129,7 @@
       <ion-slide>
         <ion-card>
           <ion-card-header>
-            <ion-img src=\assets\Paladins\Flanco\Maeve\skill\prowl.jpg ionError="MARCA"> </ion-img>
+            <ion-img src=\assets\Paladins\Flanco\Skye\skill\hidden.jpg ionError="MARCA"> </ion-img>
             <ion-card-title>ESCONDIDA</ion-card-title>
           </ion-card-header>
 
@@ -142,7 +142,7 @@
       <ion-slide>
         <ion-card>
           <ion-card-header>
-            <ion-img src=\assets\Paladins\Flanco\Maeve\skill\midnight.jpg ionError="BOMBA"> </ion-img>
+            <ion-img src=\assets\Paladins\Flanco\Skye\skill\time-bomb.jpg ionError="BOMBA"> </ion-img>
             <ion-card-title>BOMBA-RELÓGIO
 
             </ion-card-title>
