--- a/src/app/Campeões/Campeões.page.html
+++ b/src/app/Campeões/Campeões.page.html
@@ -120,8 +120,8 @@
         </div>
         <ion-grid>
             <ion-row>
-              <ion-col align-self-center name="Fernando"  id="Fernando">
-                <ion-item routerLink="/Fernando" routerDicetion="Fernando">
+              <ion-col align-self-center >
+                <ion-item routerLink="/fernando" routerDicetion="fernando">
                   <ion-thumbnail slot = "start">
                     <ion-img src="\assets\Paladins\Tank\Fernando\fernando.jpg" ionError="Fernando"> </ion-img></ion-thumbnail>
                     <h1>Fernando</h1>
@@ -130,7 +130,7 @@
                 </ion-col>
                 
                 <ion-col align-self-center>
-                  <ion-item  routerLink="/Inara" routerDicetion="Inara">
+                  <ion-item  routerLink="/inara" routerDicetion="inara">
                       <ion-thumbnail slot = "start">
 
                       <ion-img src="\assets\Paladins\Tank\Inara\inara.png" ionError="Inara"> </ion-img></ion-thumbnail>
@@ -148,7 +148,7 @@
 
               <ion-row>
                   <ion-col align-self-center>
-                    <ion-item routerLink="/Makoa" routerDicetion="Makoa" >
+                    <ion-item routerLink="/makoa" routerDicetion="makoa" >
                         <ion-thumbnail slot = "start">
                         <ion-img src="\assets\Paladins\Tank\Makoa\makoa.jpg" ionError="Makoa"> </ion-img></ion-thumbnail>
                         <h1>Makoa</h1>
@@ -157,7 +157,7 @@
                     </ion-col>
 
                     <ion-col align-self-center>
-                      <ion-item routerLink="/Khan" routerDicetion="Khan">
+                      <ion-item routerLink="/khan" routerDicetion="khan">
                           <ion-thumbnail slot = "start">
                           <ion-img src="\assets\Paladins\Tank\Khan\khan.jpg" ionError="Khan"> </ion-img></ion-thumbnail>
                           <h1>Khan</h1>
@@ -176,7 +176,7 @@
 
               <ion-row>
                 <ion-col align-self-center>
-                  <ion-item routerLink="/Fúria" routerDicetion="Fúria">
+                  <ion-item routerLink="/furia" routerDicetion="furia">
                       <ion-thumbnail slot = "start">
                       <ion-img src="\assets\Paladins\Sup\Fúria\furia.jpg"  ionError="Fúria"> </ion-img></ion-thumbnail>
                       <h1 >Fúria  </h1>
@@ -201,7 +201,7 @@
 
                 <ion-row>
                   <ion-col align-self-center>
-                    <ion-item routerLink="/Jenos" routerDicetion="Jenos">
+                    <ion-item routerLink="/jenos" routerDicetion="jenos">
                         <ion-thumbnail slot = "start">
                         <ion-img src="\assets\Paladins\Sup\Jenos\jenos.jpg"  ionError="Jenos"> </ion-img></ion-thumbnail>
                         <h1 >Jenos  </h1>
@@ -210,7 +210,7 @@
                     </ion-col>
                     
                         <ion-col align-self-center>
-                          <ion-item routerLink="/Pip" routerDicetion="Pip">
+                          <ion-item routerLink="/pip" routerDicetion="pip">
                               <ion-thumbnail slot = "start">
                               <ion-img src="\assets\Paladins\Sup\Pip\pip.jpg" ionError="Pip"> </ion-img></ion-thumbnail>
                               <h1>Pip </h1>
@@ -222,7 +222,7 @@
                 </ion-row>
                  <ion-row>
                   <ion-col align-self-center>
-                    <ion-item routerLink="/Ying" routerDicetion="Ying">
+                    <ion-item routerLink="/ying" routerDicetion="ying">
                         <ion-thumbnail slot = "start">
                         <ion-img src="\assets\Paladins\Sup\Ying\ying.jpg"  ionError="Ying"> </ion-img></ion-thumbnail>
                         <h1 >Ying </h1>
