--- a/src/app/Campeões/Campeões.page.html
+++ b/src/app/Campeões/Campeões.page.html
@@ -176,7 +176,7 @@
 
               <ion-row>
                 <ion-col align-self-center>
-                  <ion-item routerLink="/furia" routerDicetion="furia">
+                  <ion-item routerLink="/fúria" routerDicetion="fúria">
                       <ion-thumbnail slot = "start">
                       <ion-img src="\assets\Paladins\Sup\Fúria\furia.jpg"  ionError="Fúria"> </ion-img></ion-thumbnail>
                       <h1 >Fúria  </h1>
@@ -208,19 +208,7 @@
                     </ion-item>
                     <h2>O Ascendido</h2>
                     </ion-col>
-                    
-                        <ion-col align-self-center>
-                          <ion-item routerLink="/pip" routerDicetion="pip">
-                              <ion-thumbnail slot = "start">
-                              <ion-img src="\assets\Paladins\Sup\Pip\pip.jpg" ionError="Pip"> </ion-img></ion-thumbnail>
-                              <h1>Pip </h1>
-                          </ion-item>
-                          <h2>O Alquimista Trapaceiro</h2>
-                          </ion-col>
-                          
-                  
-                </ion-row>
-                 <ion-row>
+
                   <ion-col align-self-center>
                     <ion-item routerLink="/ying" routerDicetion="ying">
                         <ion-thumbnail slot = "start">
