--- a/src/app/cassie/cassie.page.html
+++ b/src/app/cassie/cassie.page.html
@@ -14,7 +14,7 @@
       <ion-col align-self-center name="lobo" id="lobo">
 
 
-        <ion-img src="\assets\Paladins\Dano\Cassie\Cassie.png" ionError="cassie" style="
+        <ion-img src="\assets\Paladins\Dano\Cassie\cassie.png" ionError="cassie" style="
                 background-color: #0e222b;
                 width: 106%;
                 border: 2px inset rgb(15,41,50);
