--- a/src/app/maeve/maeve.page.html
+++ b/src/app/maeve/maeve.page.html
@@ -14,7 +14,7 @@
       <ion-col align-self-center name="lobo" id="lobo">
 
 
-        <ion-img src="\assets\Paladins\Flanco\Maeve\Maeve.png" ionError="tyra" style="
+        <ion-img src="\assets\Paladins\Flanco\Maeve\maeve.png" ionError="tyra" style="
                 background-color: #0e222b;
                 width: 106%;
                 border: 2px inset rgb(15,41,50);
